<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202124"
    tools:context=".Splash">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout66"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/rajdhani_light"
            android:gravity="center|right"
            android:text="@string/vris"
            android:textColor="#FFFFFF"
            android:textSize="68sp"
            app:layout_constraintBottom_toTopOf="@+id/button54"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <EditText
            android:id="@+id/editTextTextPersonName18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:inputType="textPersonName"
            android:password="true"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button54"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/button54"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/opensans_light"
            android:text="@string/girisyap"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName18"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/rajdhani_light"
            android:gravity="center|left"
            android:text="@string/panel"
            android:textColor="#434343"
            android:textSize="54sp"
            app:layout_constraintBottom_toTopOf="@+id/button54"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout65"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout66"
        app:layout_constraintWidth_percent="1">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/rajdhani_light"
            android:gravity="center"
            android:text="@string/yil"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>