<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".FreecashPanel">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout142"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout160"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout138"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2">

            <ImageView
                android:id="@+id/ackapatImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/navigationbuttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.98"
                app:srcCompat="@drawable/ic_baseline_power_settings_new_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout139"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout140"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout138"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2">

            <ImageView
                android:id="@+id/freecashImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/navigationbuttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_baseline_money_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout140"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout141"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout139"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2">

            <ImageView
                android:id="@+id/gelirgiderImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/navigationbuttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_baseline_attach_money_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout141"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout140"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2">

            <ImageView
                android:id="@+id/sifirlaImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/navigationbuttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_baseline_lock_reset_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout141"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/updateImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/navigationbuttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.98"
                app:srcCompat="@drawable/ic_baseline_update_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout160"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttons"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout142"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout165"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout162"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView50"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/opensans_light"
                android:gravity="center"
                android:text="@string/onaylanmishesaplar"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout161"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout163"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout162">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout163"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout164"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout161">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/opensans_light"
                android:gravity="center"
                android:text="@string/beklemedekihesaplar"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout164"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout163">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout166"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout165"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout160"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout166"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button40"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toEndOf="@+id/checkBox16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/button41"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/opensans_light"
            android:text="@string/onayla"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.65"
            app:layout_constraintStart_toEndOf="@+id/button40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button40"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/opensans_light"
            android:text="@string/resmicek"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button41"
            app:layout_constraintHeight_percent="0.65"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName13"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <CheckBox
            android:id="@+id/checkBox16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:buttonTint="#FFFFFF"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName13"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>